# tiling

./: README.md  environment.yml  pyproject.toml
.github/workflows/: build.yml
tests/: test_cli.py
tiling/: cli.py  deepzoom.py  models.py  tiler.py  tissue_detection.py  utils.py
